[tool.poetry]
name = "prox-automigrate"
version = "0.1.0"
description = ""
authors = ["RomanKalsin <karen52rus@gmail.com>"]
readme = "README.md"
packages = [{include = "prox_automigrate"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
