[tool.poetry]
name = "prox-automigrate"
version = "0.1.0"
description = ""
authors = ["RomanKalsin <karen52rus@gmail.com>"]
readme = "README.md"
packages = [{include = "prox_automigrate"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
paramiko = "^2.11.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
prox-am = "prox_automigrate.scripts.start:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
